--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,8 +1,8 @@
 .table
   .table-row
     .table-cell.sidebar
-      %h1
-        = image_tag "logos/adopt-a-hydrant.png", :alt => t("titles.main", :thing => t("defaults.thing").titleize), :title => t("titles.main", :thing => t("defaults.thing").titleize)
+      #logo
+        = image_tag "logos/adoptasiren.png", :alt => t("titles.main", :thing => t("defaults.thing").titleize), :title => t("titles.main", :thing => t("defaults.thing").titleize)
       %p.alert-message.block-message#tagline
         = t("defaults.tagline")
       #content
