- Changed red marker to orange - Adjusted initial extent to place Oahu more toward the top left corner (see more ocean than island on lower res screens) - Enabled wheel scrolling for zoom

--- a/app/views/javascripts/main.js.erb
+++ b/app/views/javascripts/main.js.erb
@@ -1,5 +1,5 @@
 $(function() {
-  var center = new google.maps.LatLng(21.487574487, -157.987518310);
+  var center = new google.maps.LatLng(21.447955959755827, -157.96554565429688);
   var mapOptions = {
     center: center,
     disableDoubleClickZoom: true,
@@ -11,7 +11,7 @@ $(function() {
     panControl: false,
     rotateControl: false,
     scaleControl: false,
-    scrollwheel: false,
+    scrollwheel: true,
     streetViewControl: true,
     zoom: 11,
     zoomControl: true
