--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -1,8 +1,8 @@
-%h2
+%h4
   = t("titles.adopted", :thing_name => @thing.name ? @thing.name.titleize : t("defaults.this_thing", :thing => t("defaults.thing")))
-  %br
-  = t("titles.byline", :name => @thing.user.name)
-  %br
-  = t("titles.ofline", :organization => @thing.user.organization) unless @thing.user.organization.blank?
-- if user_signed_in?
-  = render :partial => 'users/reminder'
+- @thing.users.each do |u|
+  = t("titles.byline", :name => u.name)
+  = t("titles.ofline", :organization => u.organization) unless u.organization.blank?
+  %br 
+%h6
+  = t("titles.sign_in", :thing => t("defaults.thing").titleize)
