fix plural on adopted message

--- a/app/views/users/thank_you.html.haml
+++ b/app/views/users/thank_you.html.haml
@@ -1,5 +1,8 @@
 %h2
   = t("titles.thank_you", :thing => t("defaults.thing"))
 %p
-  ="#{thing.users.length} people have adopted: #{thing.name}"
-= render :partial => 'things/abandon'
+  - if thing.users.length > 1
+    ="#{thing.users.length} people adopted: #{thing.name}"
+  - else
+    ="#{thing.users.length} person adopted: #{thing.name}"
+  = render :partial => 'things/abandon'
