more email tweaks

--- a/app/views/thing_mailer/send_personalized.html.erb
+++ b/app/views/thing_mailer/send_personalized.html.erb
@@ -390,7 +390,7 @@
                                                                 <h2 class="h2">Aloha Kakahiaka!</h2>
 
 
-                                                                You are receiving this message because you have adopted a siren named #{t.name} on <a href="http://sirens.honolulu.gov">sirens.honolulu.gov</a>.
+                                                                You are receiving this message because you have adopted a siren named <%= @thing_name %> on <a href="http://sirens.honolulu.gov">sirens.honolulu.gov</a>.
 
                                                                 At 11:45am this morning the sirens will be tested. The test involves a 45-second steady tone on all the sirens.
 
@@ -399,16 +399,15 @@
                                                                 <h3 class="h3"><a href="#">No I didnt hear it, or it sounded wrong.</a></h3>
                                                                 <h3 class="h3"><a href="#">I wasn't around</a></h3>
 
-                                                                <p>Siren Malfunction: If the siren in your community does not sound or does not operate properly please call the Department of Emergency Management at 723-8960 to report it. You can also email the department at dem@honolulu.gov. With more than 170 outdoor warning sirens on Oahu we appreciate the public's assistance in identifying problem units.</p>
-                                                                <br/><br/>
+                                                                <p><strong><em>Siren Malfunction:</em></strong> If the siren in your community does not sound or does not operate properly please call the Department of Emergency Management at 723-8960 to report it. You can also email the department at dem@honolulu.gov. With more than 170 outdoor warning sirens on Oahu we appreciate the public's assistance in identifying problem units.</p>
+                                                               
 
-                                                                <p>Siren Damage or Vandalism: You can help us to safeguard our Outdoor Siren Warning System. Please report any acts of vandalism, damages, or missing sirens or components to the Department of Emergency Management at 723-8960. You can also email the department at dem@honolulu.gov and include any images you may have of the siren in question. Any suspicious activity should be reported immediately to the Honolulu Police Department by calling 911.</p>
-                                                                <br/><br/>
+                                                                <p><strong><em>Siren Damage or Vandalism:</em></strong> You can help us to safeguard our Outdoor Siren Warning System. Please report any acts of vandalism, damages, or missing sirens or components to the Department of Emergency Management at 723-8960. You can also email the department at dem@honolulu.gov and include any images you may have of the siren in question. Any suspicious activity should be reported immediately to the Honolulu Police Department by calling 911.</p>                                                                
 
-                                                                <p>You can submit a comprehesive report about malfunctioning or vandalized sirens online <a href="http://www3.honolulu.gov/DEMSiren/" here</a></p>
+                                                                <p>You can submit a comprehesive report about malfunctioning or vandalized sirens online <a href="http://www3.honolulu.gov/DEMSiren/"> here</a></p>
 
-                                                                <br/><br/>
-<p><strong>Mahalo!</strong></p>
+                                                                
+                                                                <p><strong>Mahalo!</strong></p>
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -432,7 +431,7 @@
                                                     <tr>
                                                         <td colspan="2" valign="middle" id="social">
                                                             <div mc:edit="std_social">
-                                                                &nbsp;<a href="http://twitter.com/hnl_info">follow on Twitter</a> | <a href="http://www.facebook.com/honolulu.gov">friend on Facebook</a> | <a href="http://hnlsirens.herokuapp.com">Adopt-a-sirens</a>&nbsp;
+                                                                &nbsp;<a href="http://twitter.com/hnl_info">follow on Twitter</a> | <a href="http://www.facebook.com/honolulu.gov">friend on Facebook</a> | <a href="http://hnlsirens.herokuapp.com">Adopt-a-siren</a>&nbsp;
                                                             </div>
                                                         </td>
                                                     </tr>
