--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -235,18 +235,19 @@ fieldset {
 
 .sidebar #logos #col1 img {
   float: left;
-  margin: 5px 0;
+  margin: 40px 0;
 }
 
 .sidebar #logos #col2 {
   float: left;
+  margin-top:10px;
   margin-left: 10px;
   width: 100px;
 }
 
 .sidebar #mayor {
   font-family: "Times New Roman", Times, serif;
-  font-size: 8px;
+  font-size: 10px;
   padding: 0;
   margin: -5px 0 0 0;
 }
