syntax error in template

--- a/app/views/sidebar/_tos.html.haml
+++ b/app/views/sidebar/_tos.html.haml
@@ -38,7 +38,7 @@
             %li
               requests by law enforcement or other government agencies,
             %li
-     e        discontinuance or material modification to AAS (or any part thereof),
+              discontinuance or material modification to AAS (or any part thereof),
             %li
               unexpected technical or security issues or problems,
             %li
