tos changes for honolulu

--- a/app/views/sidebar/_tos.html.haml
+++ b/app/views/sidebar/_tos.html.haml
@@ -104,9 +104,9 @@
         %p
           You may not attempt to override or circumvent any of the usage rules embedded into AAS.
         %p
-          You may not trace any information of any other AAS user or visitor or otherwise use AAH for the purpose of obtaining information of any other AAS user.
+          You may not trace any information of any other AAS user or visitor or otherwise use AAS for the purpose of obtaining information of any other AAS user.
         %p
-          You may not attempt to gain unauthorized access to AAH or the computer systems and networks connected to AAS through hacking, password mining, or any other means.
+          You may not attempt to gain unauthorized access to AAS or the computer systems and networks connected to AAS through hacking, password mining, or any other means.
         %p
           You may not release the results of any performance or functional evaluation of AAS to any third party without prior written approval of the City for each such release.
         %p
@@ -115,7 +115,7 @@
         %h3
           Interstate Nature of Communications on Adopt-a-Siren
         %p
-          When you use the application, you acknowledge that in using AAS, you will be causing communications to be sent potentially through a variety of networks (Internet service provider, wireless phone network, etc.) As a result, even communications that seem to be intrastate in nature can result in the transmission of interstate communications regardless of where you are physically located at the time of transmission. Accordingly, you agree that use of the AAH may result in interstate data transmissions.
+          When you use the application, you acknowledge that in using AAS, you will be causing communications to be sent potentially through a variety of networks (Internet service provider, wireless phone network, etc.) As a result, even communications that seem to be intrastate in nature can result in the transmission of interstate communications regardless of where you are physically located at the time of transmission. Accordingly, you agree that use of the AAS may result in interstate data transmissions.
       %li
         %h3
           Submissions to the City
@@ -141,7 +141,7 @@
           You agree to indemnify and hold the City and its subsidiaries, affiliates, officers, agents, employees, partners, and licensors harmless from any claim or demand (including reasonable attorneys' fees) made by any third party due to or arising out of:
           %ol.alpha
             %li
-              Content you submit or otherwise make available through AAH,
+              Content you submit or otherwise make available through AAS,
             %li
               your use of AAS,
             %li
@@ -166,7 +166,7 @@
         %h3
           The City's Proprietary Rights
         %p
-          You acknowledge and agree that AAS contains proprietary and confidential information that is owned by the City and protected by applicable intellectual property and other laws. You will not use such proprietary information in any way whatsoever except for use of AAH in compliance with the provisions of this Agreement.
+          You acknowledge and agree that AAS contains proprietary and confidential information that is owned by the City and protected by applicable intellectual property and other laws. You will not use such proprietary information in any way whatsoever except for use of AAS in compliance with the provisions of this Agreement.
         %h4.upcase
           Disclaimer of Warranties
         %p.upcase
@@ -182,7 +182,7 @@
                 %li
                   AAS will be uninterrupted, timely, secore, or error-free;
                 %li
-                  the results that may be obtained from the use of AAH will be accurate or reliable;
+                  the results that may be obtained from the use of AAS will be accurate or reliable;
                 %li
                   any errors in the software will be corrected;
                 %li
@@ -202,16 +202,16 @@
             %li
               unauthorized access, use or alteration of your transmissions or content, whether based on warranty, contract, tort (including negligence) or any other legal theory, whether or not the city has been informed of the possibility of such damage, and even if a remedy set forth herein is found to have failed of its essential purpose.
         %p.upcase
-          You expressly agree that the city is not responsible for any contact or interaction between you and any other user of AAH and that you bear the sole risk of transmitting through the application any content, including information which identifies you or your location.
+          You expressly agree that the city is not responsible for any contact or interaction between you and any other user of AAS and that you bear the sole risk of transmitting through the application any content, including information which identifies you or your location.
         %p.upcase
-          You agree that the negation of damages set forth above is a fundamental element of the basis of the bargain between the city and you and that the foregoing limitation of liability is an agreed upon allocation of risk between you and the city. You acknowledge that absent your agreement to this limitation of liability the city would not provide AAH to you.
+          You agree that the negation of damages set forth above is a fundamental element of the basis of the bargain between the city and you and that the foregoing limitation of liability is an agreed upon allocation of risk between you and the city. You acknowledge that absent your agreement to this limitation of liability the city would not provide AAS to you.
       %li
         %h3
           Notice
         %p
           The City may provide you with notices regarding AAS, including changes to this Agreement, by email, SMS, text message, postings on AAS, or any other reasonable means now known or hereafter developed. Notices shall be effective immediately.
         %p
-          Such notices may not be received if you violate this Agreement by accessing the AAH in an unauthorized manner. You agree that you will be deemed to have received any and all notices that would have been delivered had you accessed AAS in an authorized manner.
+          Such notices may not be received if you violate this Agreement by accessing the AAS in an unauthorized manner. You agree that you will be deemed to have received any and all notices that would have been delivered had you accessed AAS in an authorized manner.
       %li
         %h3
           Minor
@@ -230,7 +230,7 @@
         %h3
           Governing Law and Venue
         %p
-          This Agreement is governed by the laws of the Commonwealth of Massachusetts without regard to any conflict of law provisions. You agree that any claim or dispute with the City relating in any way to your use of AAS shall be brought exclusively before a state or federal court sitting in Boston, Massachusetts, and you irrevocably waive any jurisdictional, venue, or inconvenient forum objections to such courts.
+          This Agreement is governed by the laws of the Commonwealth of Massachusetts without regard to any conflict of law provisions. You agree that any claim or dispute with the City relating in any way to your use of AAS shall be brought exclusively before a state or federal court sitting in Honolulu, Hawaii, and you irrevocably waive any jurisdictional, venue, or inconvenient forum objections to such courts.
       %li
         %h3
           Miscellaneous
@@ -241,7 +241,7 @@
         %p
           The City's failure to assert any right or provision under this Agreement shall not constitute a waiver of such right or provision.
         %p
-          You agree that any cause of action arising out of or related to your use of AAH must commence within one year after the cause of action accrues. Otherwise, such cause of action is permanently barred.
+          You agree that any cause of action arising out of or related to your use of AAS must commence within one year after the cause of action accrues. Otherwise, such cause of action is permanently barred.
         %p
           The section titles in this Agreement are for convenience only and have no legal or contractual effect.
     %p
