change email address to dem

--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -25,7 +25,7 @@
 
       #feedback
         %p
-          %a{:href => URI.escape("mailto:adoptasiren@honolulu.gov?subject=#{t("titles.main", :thing => t("defaults.thing").titleize)} #{t("links.feedback").titleize}")}
+          %a{:href => URI.escape("mailto:dem@honolulu.gov?subject=#{t("titles.main", :thing => t("defaults.thing").titleize)} #{t("links.feedback").titleize}")}
             = t("links.feedback")
     .table-cell.map-container
       #map
