--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,3 +21,16 @@
     = stylesheet_link_tag "screen"
   %body
     = yield
+    %script{:type=> "text/javascript"}
+      var _kmq = _kmq || [];
+      var _kmk = _kmk || '5777639af0958fe4f5ee441531f98fe4823dce2c';
+      function _kms(u){
+      setTimeout(function(){
+      var d = document, f = d.getElementsByTagName('script')[0],
+      s = d.createElement('script');
+      s.type = 'text/javascript'; s.async = true; s.src = u;
+      f.parentNode.insertBefore(s, f);
+      }, 1);
+      }
+      _kms('//i.kissmetrics.com/i.js');
+      _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
