--- a/app/views/main/unauthenticated.html.haml
+++ b/app/views/main/unauthenticated.html.haml
@@ -8,12 +8,17 @@
       #content
         = render :partial => "sidebar/combo_form"
       #logos
-        %a{:href => "http://codeforamerica.org/"}
-          = image_tag "logos/cfa.png", :alt => t("sponsors.cfa"), :title => t("sponsors.cfa")
-        %a{:href => "http://bostonbuilt.org/"}
-          = image_tag "logos/boston.png", :alt => t("sponsors.city"), :title => t("sponsors.city")
+        #col1
+          %a{:href => "http://codeforamerica.org/"}
+            = image_tag "logos/cfa.png", :alt => t("sponsors.cfa"), :title => t("sponsors.cfa")
+        #col2
+          %a{:href => "http://www.honolulu.gov/"}
+            = image_tag "logos/cchonolulu.png", :alt => t("sponsors.city"), :title => t("sponsors.city")
+          %p#mayor
+            %a{:href => "http://www1.honolulu.gov/mayor/"}
+              = t("sponsors.mayor.name") +", "+ t("sponsors.mayor.title") 
       #feedback
-        %a{:href => URI.escape("mailto:adoptahydrant@cityofboston.gov?subject=#{t("titles.main", :thing => t("defaults.thing").titleize)} #{t("links.feedback").titleize}")}
+        %a{:href => URI.escape("mailto:dem@honolulu.gov?subject=#{t("titles.main", :thing => t("defaults.thing").titleize)} #{t("links.feedback").titleize}")}
           = t("links.feedback")
     .table-cell#map
       &nbsp;
