--- a/app/views/javascripts/main.js.erb
+++ b/app/views/javascripts/main.js.erb
@@ -16,21 +16,22 @@ $(function() {
     zoom: 11,
     zoomControl: true
   };
+  var showStatus = false;
   var map = new google.maps.Map(document.getElementById("map"), mapOptions);
   var size = new google.maps.Size(29.0, 37.0);
   var origin = new google.maps.Point(0, 0);
   var anchor = new google.maps.Point(13.0, 18.0);
-  var greenMarkerImage = new google.maps.MarkerImage('<%= image_path 'markers/green.png' %>',
+  var greenMarkerImage = new google.maps.MarkerImage('<%= t 'markers.green' %>',
     size,
     origin,
     anchor
   );
-  var greenStarMarkerImage = new google.maps.MarkerImage('<%= image_path 'markers/green_star.png' %>',
+  var greenStarMarkerImage = new google.maps.MarkerImage('<%= t 'markers.green_star' %>',
     size,
     origin,
     anchor
   );
-  var orangeMarkerImage = new google.maps.MarkerImage('<%= image_path 'markers/orange.png' %>',
+  var orangeMarkerImage = new google.maps.MarkerImage('<%= t 'markers.orange' %>',
     size,
     origin,
     anchor
@@ -148,7 +149,14 @@ $(function() {
     });
   }
   var urlActions = function(){
-    console.log(window.location.hash)
+
+    if((window.location.pathname.length > 1) && 
+      (window.location.pathname === "/reports")){
+  
+      showStatus = true;
+    }
+
+
     if(window.location.hash.length > 0){
       //#2:54:failed
       var hash = window.location.hash.substring(1, window.location.hash.length);
@@ -197,7 +205,6 @@ $(function() {
                           statusCode:parts[2]};
 
         $.ajax("/status.json", {type:"POST", data:statusData, success:function(data){
-          console.log("Thanks for reporting");
         }},"json");
       }
 
