--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -2,7 +2,7 @@
   .table-row
     .table-cell.sidebar
       #logo
-        = image_tag "logos/adoptasiren.png", :alt => t("titles.main", :thing => t("defaults.thing").titleize), :title => t("titles.main", :thing => t("defaults.thing").titleize)
+        = image_tag t("logos.adopta"), :alt => t("titles.main", :thing => t("defaults.thing").titleize), :title => t("titles.main", :thing => t("defaults.thing").titleize)
       %p.alert-message.block-message#tagline
         = t("defaults.tagline")
       #content
