--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,6 +19,7 @@
       var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-32915849-3"]),_gaq.push(["_setDomainName","sirens.honolulu.gov"]),_gaq.push(["_trackPageview"]),function(){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}();
     = stylesheet_link_tag "http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css"
     = stylesheet_link_tag "screen"
+    = favicon_link_tag t("logos.favicon")
   %body
     = yield
     %script{:type=> "text/javascript"}
