--- a/app/views/sidebar/_search.html.haml
+++ b/app/views/sidebar/_search.html.haml
@@ -1,3 +1,4 @@
+%p.welcome Welcome, #{current_user.name}
 = form_tag "/address", :method => "get", :id => "address_form", :class => "search-form form-stacked" do
   = hidden_field_tag "limit", params[:limit] || 10
   %fieldset.control-group
